# TCCRecipeBrowser

./: README.md
backend/: .gitignore  LICENSE  alembic.ini  poetry.toml  pyproject.toml  setup.cfg
backend/app/: config.py  main.py
backend/app/api/routes/v1/: accounts_router.py  api.py  authentication_router.py  ingredients_router.py  recipeingredient_router.py  recipes_router.py
backend/app/constant/: string.py
backend/app/core/: events.py
backend/app/core/settings/: settings.toml
backend/app/db/: errors.py  events.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2023-05-07_.py  2023-05-10_.py  2023-05-21_.py
backend/app/db/repositories/: Ingredient_repo.py  account_repo.py  base.py  recipe_repo.py  recipeingredient_repo.py  unittype_repo.py
backend/app/db/tables/: __init__.py  account_table.py  base_class.py  createditem_table.py  ingredient_table.py  menu_table.py  menurecipe_table.py  recipe_table.py  recipeingredient_table.py  unittype_table.py
backend/app/dependencies/: authentication_deps.py  database.py
backend/app/models/domain/: account_domain.py  base_domain.py  ingredient_domain.py  recipe_domain.py  unit_domain.py
backend/app/models/schema/: account_schema.py  base_schema.py  ingredient_schema.py  jwt_schema.py  recipe_schema.py  recipeingredient_schema.py
backend/app/services/: authentication.py  commons.py  ingredient_service.py  jwt.py  recipe_service.py  security.py  unittype_service.py
frontend/: .eslintrc.json  App.tsx  app.json  babel.config.js  package.json  tsconfig.json
(+26 files in other folders)
